infra/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biddinggo-api-deploy
  namespace: biddinggo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biddinggo-api
  template:
    metadata:
      labels:
        app: biddinggo-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: biddinggo-api
          image: ghcr.io/jin605/biddinggo-backend:2
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
